--- a/src/reset.css
+++ b/src/reset.css
@@ -1,31 +1,31 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
-  }
-  
-  :root {
-    --primary: #2A7AE4;
-    --black: #000000;
-    --blackLighter: #9E9E9E;
-    --grayLight: #F5F5F5;
-    --grayMedium: #e5e5e5; 
-    --white: #FFFFFF;
-    --frontEnd: #6BD1FF;
-    --backEnd: #00C86F;
-  }
-  
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  a {
-    color: inherit;
-  } 
+  box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
+}
 
-  #root {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
+:root {
+  --primary: #2a7ae4;
+  --black: #000000;
+  --blackLighter: #9e9e9e;
+  --grayLight: #f5f5f5;
+  --grayMedium: #e5e5e5;
+  --white: #ffffff;
+  --frontEnd: #6bd1ff;
+  --backEnd: #00c86f;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+}
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
