--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -1,9 +1,5 @@
 body {
   background-color: black;
-  display: block;
-}
-.Link {
-  text-align: right;
 }
 
 .Login::after {
@@ -14,9 +10,11 @@ body {
 .Logo_Netflix {
   display: inline-block;
   margin-top: 100px;
-  width: 25%;
+  width: 150px;
   height: 150px;
   color: var(--white);
+  margin-right: auto;
+  margin-left: auto;
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
@@ -33,7 +31,9 @@ body {
 .Logo_Netflix2 {
   display: inline-block;
   margin-top: 100px;
-  width: 25%;
+  margin-right: auto;
+  margin-left: auto;
+  width: 150px;
   height: 150px;
   color: var(--white);
   cursor: pointer;
@@ -49,11 +49,14 @@ body {
   border-radius: 10px;
 }
 
-li {
+li,
+ul {
   text-align: center;
   list-style: none;
   color: white;
+  width: 100%;
 }
 h1 {
   font-size: 22px;
+  text-align: center;
 }
